tests/baselines/reference/classAbstractAccessor(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
classAbstractAccessor.ts(3,17): error TS1318: An abstract accessor cannot have an implementation.
classAbstractAccessor.ts(5,17): error TS1318: An abstract accessor cannot have an implementation.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== classAbstractAccessor.ts (2 errors) ====
    abstract class A {
       abstract get a();
       abstract get aa() { return 1; } // error
                    ~~
!!! error TS1318: An abstract accessor cannot have an implementation.
       abstract set b(x: string);
       abstract set bb(x: string) {} // error
                    ~~
!!! error TS1318: An abstract accessor cannot have an implementation.
    }
    